<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.action.selectParametersFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="286dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:text="@string/option_param_hint"
        android:textSize="@dimen/card_sub_item_name_font_size"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_count"
        android:layout_width="295dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        app:chipSpacingHorizontal="@dimen/chip_h_spacing"
        app:singleSelection="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_10_cards"
            android:checkable="true"
            app:chipIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_20_cards"
            android:checkable="true"
            app:chipIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_40_cards"
            android:checkable="true"
            app:chipIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_80_cards"
            android:checkable="true"
            app:chipIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_100_cards"
            android:checkable="true"
            app:chipIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_all_cards"
            android:checkable="true"
            android:checked="true"
            app:chipIconEnabled="false" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:chipSpacingHorizontal="@dimen/chip_h_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup_count"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:text="@string/option_by_sequence"
            app:chipIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/option_by_random"
            app:chipIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_importance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/option_by_importance"
            app:chipIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_hardness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/option_by_hardness"
            app:chipIconEnabled="false" />


    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_action_go"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup3"
        app:layout_constraintVertical_bias="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>